[gd_scene load_steps=9 format=3 uid="uid://docbhpsuw4inm"]

[ext_resource type="Texture2D" uid="uid://bvl8i6ojremuo" path="res://Assets/textures/bg.png" id="1_24wmx"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_jo5lm"]
[ext_resource type="PackedScene" uid="uid://cemj5hx1oqvob" path="res://Scenes/player.tscn" id="2_812v1"]
[ext_resource type="PackedScene" uid="uid://dviagtrbkopr" path="res://Scenes/enemy_spawner.tscn" id="3_pxuro"]
[ext_resource type="PackedScene" uid="uid://jgc5clmhg2d3" path="res://Scenes/hud.tscn" id="5_qpw0b"]
[ext_resource type="AudioStream" uid="uid://cwvnynvtnr6la" path="res://Assets/audio/hit.wav" id="6_y3l8x"]
[ext_resource type="AudioStream" uid="uid://ch8qy28b5atqk" path="res://Assets/audio/explode.wav" id="7_4nuhr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ow7ls"]
size = Vector2(20, 758)

[node name="Game" type="Node2D"]
script = ExtResource("1_jo5lm")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("5_qpw0b")]
offset_left = 44.0
offset_top = 10.0
offset_right = 44.0
offset_bottom = 10.0

[node name="Background" type="TextureRect" parent="."]
offset_right = 1286.0
offset_bottom = 721.0
texture = ExtResource("1_24wmx")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_812v1")]
position = Vector2(260, 384)

[node name="EnemySpawner" parent="." instance=ExtResource("3_pxuro")]

[node name="Deathzone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(-100, 371)
shape = SubResource("RectangleShape2D_ow7ls")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y3l8x")

[node name="PlayerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4nuhr")

[connection signal="tookDamage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemySpawn" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawn"]
[connection signal="pathEnemySpawn" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawn"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
